        their atomic numbers.
    - ddlm_validate:
      - updated the help message to indicate that '--die-on-errors' is
        the default option instead of '--continue-on-errors'.
    - cif_validate:
      - updated the help message to indicate that '--die-on-errors' is
        the default option instead of '--continue-on-errors'.
    - COD::CIF::DDL:
      - replaced Perl 'each @array' construct with a more portable
        one in cif_to_ddlm().
    - COD::CIF::DDL::DDLm::Validate:
      - replaced '\d' with '[0-9]' in several regular expressions.
    - COD::CIF::DDL::Ranges:
      - moved the handling of a Perl capture variable into a conditional
        statement in the parse_range() subroutine.
    - COD::ErrorHandler:
      - moved the handling of a Perl capture variable into a conditional
        statement in the process_errors() subroutine.
    - COD::Formulae::Print:
      - removing redundant quantities '1' from constructed formulae.

cod-tools (3.0.1)

  * Added:
    - dependencies for Fedora 32.
  * Fixed:
    - dic2markdown:
      - updated the script to properly process DDLm dictionary save frames
        that do not contain an explicit definition class.
  * Removed:
    - dependencies:
      - Carp::Assert as a run and build dependency.

cod-tools (3.0.0)

  * Changed:
    - cif2cod:
      - header with field names is printed by default for CSV output format.
    - cif2xyz:
      - proper XYZ format with a header is produced by default.
    - cif_fix_values:
      - CIF dictionary handling interface has been changed to match the interface
        of the cif_validate script. The '--dictionaries' option has been replaced
        with the '--dictionary' and the '--add-dictionaries' option with the
        '--add-dictionary' option.
    - cif_parse:
      - the output format from the one produced by the COD::ShowStruct
        module to the one produced by the Data::Dumper module;
      - merged in the cif_printout script.
    - cif_select: