@@ -106,7 +106,7 @@ sub parse_author_name
     my $Initials = qr/(?:${Initial}|${First})(?:\s+(?:${Initial}|${First}))*
                      |(?:${Initial})(?:\s*${Initial})*(?:\s*${First}(?=[,\s]))?
                      /x;
-    my $LastNames = qr/${Last}(?:\s+${Last})*/;
+    my $LastNames = qr/${Last}(?:\s+${Last})*/; #?:\s+${Jr})?/
 
     my $UCS_author = $unparsed_name;
     my $space = {
@@ -181,7 +181,7 @@ sub parse_author_name
             $parsed_name{'jr'}    = $3,
             $parsed_name{'first'} = $4;
             ## print ">>> 9: name = '$UCS_author', FIRST = '$4', VON = '$1', LAST = '$2', JR = '$3'\n";
-        } elsif ( $UCS_author =~ /^\s*(${LastNames})\s*,\s*(${Jr})\s*,\s*(${FirstNames})\s*$/ ) {
+        } elsif ( $UCS_author =~ /^\s*(${LastNames})(?:\s*,|\s)\s*(${Jr})\s*,\s*(${FirstNames})\s*$/ ) {
             $parsed_name{'first'} = $3;
             $parsed_name{'jr'}    = $2,
             $parsed_name{'last'}  = $1;
