@@ -44,6 +44,8 @@ cod-tools (unreleased)
     - cif_validate:
       - updated the help message to indicate that '--die-on-errors' is
         the default option instead of '--continue-on-errors'.
+    - COD::AuthorNames:
+      - recognizing names like 'Surname II, Name'.
     - COD::CIF::DDL:
       - replaced Perl 'each @array' construct with a more portable
         one in cif_to_ddlm().
